Update html_op param

--- a/example/extract/extract_html.ipynb
+++ b/example/extract/extract_html.ipynb
@@ -116,11 +116,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data = [{\"filename\": f'../transform/data/raw_input/22.11_information-theory.html'}]"
+    "data = [{\"filename\": f'../transform/data/raw_input/22.11_information-theory.html'}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [{\"tt\": \"11\"}]"
    ]
   },
   {
@@ -132,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,21 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/1 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:00<00:00,  1.91it/s]\n"
+      "100%|██████████| 1/1 [00:00<00:00, 10.74it/s]\n"
      ]
     }
    ],
@@ -174,35 +176,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['GitHub - CambioML/uniflow: Unified interface for pre-training data '\n",
-      " 'augmentation and post-training evaluation of Large Language Models '\n",
-      " '(LLMs).Skip to content',\n",
-      " 'Automate any workflow',\n",
-      " 'Host and manage packages',\n",
-      " 'Find and fix vulnerabilities',\n",
-      " 'Instant dev environments',\n",
-      " 'Write better code with AI',\n",
-      " 'Collaborate outside of code',\n",
-      " 'White papers, Ebooks, Webinars',\n",
-      " 'Fund open source developers',\n",
-      " 'GitHub community articles',\n",
-      " 'Search code, repositories, users, issues, pull requests...',\n",
-      " 'We read every piece of feedback, and take your input very seriously.',\n",
-      " 'Include my email address so I can be contacted',\n",
-      " 'Use saved searches to filter your results more quickly',\n",
-      " 'To see all available qualifiers, see our',\n",
-      " 'You signed in with another tab or window.',\n",
-      " 'to refresh your session.',\n",
-      " 'You signed out in another tab or window.',\n",
-      " 'to refresh your session.',\n",
-      " 'You switched accounts on another tab or window.']\n"
+      "['22.11. Information Theory — Dive into Deep Learning 1.0.3 documentation22.',\n",
+      " 'Appendix: Mathematics for Deep Learning',\n",
+      " '2.1. Data Manipulation',\n",
+      " '2.2. Data Preprocessing',\n",
+      " '2.5. Automatic Differentiation',\n",
+      " '2.6. Probability and Statistics',\n",
+      " '3. Linear Neural Networks for Regression',\n",
+      " '3.1. Linear Regression',\n",
+      " '3.2. Object-Oriented Design for Implementation',\n",
+      " '3.3. Synthetic Regression Data',\n",
+      " '3.4. Linear Regression Implementation from Scratch',\n",
+      " '3.5. Concise Implementation of Linear Regression',\n",
+      " '4. Linear Neural Networks for Classification',\n",
+      " '4.1. Softmax Regression',\n",
+      " '4.2. The Image Classification Dataset',\n",
+      " '4.3. The Base Classification Model',\n",
+      " '4.4. Softmax Regression Implementation from Scratch',\n",
+      " '4.5. Concise Implementation of Softmax Regression',\n",
+      " '4.6. Generalization in Classification',\n",
+      " '4.7. Environment and Distribution Shift']\n"
      ]
     }
    ],
