Update extract html example

--- a/example/extract/extract_html.ipynb
+++ b/example/extract/extract_html.ipynb
@@ -111,25 +111,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = [{\"url\": f'https://github.com/CambioML/uniflow'}]"
+    "# data = [{\"url\": f'https://github.com/CambioML/uniflow'}]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = [{\"filename\": f'../transform/data/raw_input/22.11_information-theory.html'}]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = [{\"tt\": \"11\"}]"
    ]
   },
   {
@@ -141,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 10.74it/s]\n"
+      "100%|██████████| 1/1 [00:00<00:00, 10330.80it/s]\n"
      ]
     }
    ],
@@ -176,40 +167,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['22.11. Information Theory — Dive into Deep Learning 1.0.3 documentation22.',\n",
+      "['22.11. Information Theory — Dive into Deep Learning 1.0.3 documentation',\n",
       " 'Appendix: Mathematics for Deep Learning',\n",
+      " 'navigate_next',\n",
+      " 'Information Theory',\n",
+      " 'Quick search',\n",
+      " 'Show Source',\n",
+      " 'Preview Version',\n",
+      " 'Table Of Contents',\n",
+      " 'Installation',\n",
+      " '1. Introduction',\n",
+      " '2. Preliminaries',\n",
       " '2.1. Data Manipulation',\n",
       " '2.2. Data Preprocessing',\n",
+      " '2.3. Linear Algebra',\n",
+      " '2.4. Calculus',\n",
       " '2.5. Automatic Differentiation',\n",
       " '2.6. Probability and Statistics',\n",
-      " '3. Linear Neural Networks for Regression',\n",
-      " '3.1. Linear Regression',\n",
-      " '3.2. Object-Oriented Design for Implementation',\n",
-      " '3.3. Synthetic Regression Data',\n",
-      " '3.4. Linear Regression Implementation from Scratch',\n",
-      " '3.5. Concise Implementation of Linear Regression',\n",
-      " '4. Linear Neural Networks for Classification',\n",
-      " '4.1. Softmax Regression',\n",
-      " '4.2. The Image Classification Dataset',\n",
-      " '4.3. The Base Classification Model',\n",
-      " '4.4. Softmax Regression Implementation from Scratch',\n",
-      " '4.5. Concise Implementation of Softmax Regression',\n",
-      " '4.6. Generalization in Classification',\n",
-      " '4.7. Environment and Distribution Shift']\n"
+      " '2.7. Documentation']\n"
      ]
     }
    ],
    "source": [
-    "text = output[0]['output'][0]['text'][0]\n",
-    "text = [p for p in text.split(\"\\n\") if len(p) > 20]\n",
-    "pprint.pprint(text[:20])"
+    "text = output[0]['output'][0]['text'][0:30]\n",
+    "text = [p for p in text if len(p) > 10]\n",
+    "pprint.pprint(text)"
    ]
   },
   {
