--- a/example/extract/extract_html.ipynb
+++ b/example/extract/extract_html.ipynb
@@ -210,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comparsion with `unstructured`\n",
+    "### Comparison with `unstructured`\n",
     "\n",
     "- text context: Both `unstructured` and our `ExtractHTMLFlow` perform well.\n",
     "\n",
