--- a/example/extract/extract_html.ipynb
+++ b/example/extract/extract_html.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00,  1.77it/s]\n"
+      "100%|██████████| 1/1 [00:00<00:00,  1.72it/s]\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -212,20 +212,20 @@
    "source": [
     "### Comparison with `unstructured`\n",
     "\n",
-    "- text context: Both `unstructured` and our `ExtractHTMLFlow` perform well.\n",
+    "- Text context: Both `unstructured` and our `ExtractHTMLFlow` perform well.\n",
     "\n",
-    "- table content: Both `unstructured` and our `ExtractHTMLFlow` perform well.\n",
+    "- Table content: Both `unstructured` and our `ExtractHTMLFlow` perform well.\n",
     "\n",
-    "- list content: Both `unstructured` and our `ExtractHTMLFlow` perform well.\n",
+    "- List content: Both `unstructured` and our `ExtractHTMLFlow` perform well.\n",
     "\n",
-    "- code block: Our `ExtractHTMLFlow` performs better.\n",
+    "- Code block: Our `ExtractHTMLFlow` performs better.\n",
     "\n",
-    "- code in text: Both we and unstructured need to improve."
+    "- Code in text: Both we and unstructured need to improve."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
