Refactor local and s3 extract flow using unify io

--- a/example/extract/extract_txt.ipynb
+++ b/example/extract/extract_txt.ipynb
@@ -19,28 +19,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/ubuntu/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'extract': ['ExtractMarkdownFlow', 'ExtractPDFFlow', 'ExtractTxtFlow'],\n",
-       " 'transform': ['TransformCopyFlow',\n",
+       "{'extract': ['ExtractHTMLFlow',\n",
+       "  'ExtractImageFlow',\n",
+       "  'ExtractIpynbFlow',\n",
+       "  'ExtractMarkdownFlow',\n",
+       "  'ExtractPDFFlow',\n",
+       "  'ExtractTxtFlow',\n",
+       "  'ExtractS3TxtFlow'],\n",
+       " 'transform': ['TransformAzureOpenAIFlow',\n",
+       "  'TransformCopyFlow',\n",
        "  'TransformHuggingFaceFlow',\n",
        "  'TransformLMQGFlow',\n",
-       "  'TransformOpenAIFlow']}"
+       "  'TransformOpenAIFlow'],\n",
+       " 'rater': ['RaterFlow']}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 13357.66it/s]"
+      "100%|██████████| 1/1 [00:00<00:00, 13107.20it/s]"
      ]
     },
     {
@@ -110,7 +118,7 @@
       "                       \"the concept of superlinear returns. And if you're \"\n",
       "                       'ambitious you definitely should, because this will be '\n",
       "                       'the wave you surf on.']}],\n",
-      "  'root': <uniflow.node.Node object at 0x7f0e6b1d4430>}]\n"
+      "  'root': <uniflow.node.Node object at 0x7f0e7e6efdc0>}]\n"
      ]
     },
     {
@@ -128,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +148,7 @@
        " \"You can't understand the world without understanding the concept of superlinear returns. And if you're ambitious you definitely should, because this will be the wave you surf on.\"]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +219,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f0e80635d50>"
+       "<graphviz.graphs.Digraph at 0x7f0e984a7130>"
       ]
      },
      "metadata": {},
@@ -223,11 +231,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## End of the notebook\n",
+    "\n",
+    "Check more Uniflow use cases in the [example folder](https://github.com/CambioML/uniflow/tree/main/example/model#examples)!\n",
+    "\n",
+    "<a href=\"https://www.cambioml.com/\" title=\"Title\">\n",
+    "    <img src=\"../image/cambioml_logo_large.png\" style=\"height: 100px; display: block; margin-left: auto; margin-right: auto;\"/>\n",
+    "</a>"
+   ]
   }
  ],
  "metadata": {
