--- a/example/extract/extract_txt_from_s3.ipynb
+++ b/example/extract/extract_txt_from_s3.ipynb
@@ -42,19 +42,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/lingjiekong/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/ubuntu/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'extract': ['ExtractImageFlow',\n",
+       "{'extract': ['ExtractHTMLFlow',\n",
+       "  'ExtractImageFlow',\n",
        "  'ExtractIpynbFlow',\n",
        "  'ExtractMarkdownFlow',\n",
        "  'ExtractPDFFlow',\n",
-       "  'ExtractTxtFlow',\n",
-       "  'ExtractS3TxtFlow'],\n",
+       "  'ExtractTxtFlow'],\n",
        " 'transform': ['TransformAzureOpenAIFlow',\n",
        "  'TransformCopyFlow',\n",
        "  'TransformHuggingFaceFlow',\n",
@@ -72,7 +72,7 @@
     "import os\n",
     "\n",
     "from uniflow.flow.client import ExtractClient\n",
-    "from uniflow.flow.config import ExtractS3TxtConfig\n",
+    "from uniflow.flow.config import ExtractTxtConfig\n",
     "from uniflow.viz import Viz\n",
     "from uniflow.flow.flow_factory import FlowFactory\n",
     "\n",
@@ -127,76 +127,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = [{\"bucket\": \"uniflow-test\",\n",
-    "         \"key\": \"test.txt\"}]"
+    "# data = [{\"bucket\": \"uniflow-test\",\n",
+    "#          \"key\": \"test.txt\"}]\n",
+    "\n",
+    "data = [{\"filename\": \"s3://uniflow-test/test.txt\"}]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = ExtractClient(ExtractS3TxtConfig())"
+    "client = ExtractClient(ExtractTxtConfig())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading test.txt to /tmp/aws/s3/test.txt\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/1 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:00<00:00,  2.96it/s]"
+      "100%|██████████| 1/1 [00:00<00:00,  9.20it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'output': [{'text': [\"One of the most important things I didn't understand \"\n",
-      "                       'about the world when I was a child is the degree to '\n",
-      "                       'which the returns for performance are superlinear.',\n",
-      "                       'Teachers and coaches implicitly told us the returns '\n",
-      "                       'were linear. \"You get out,\" I heard a thousand times, '\n",
-      "                       '\"what you put in.\" They meant well, but this is rarely '\n",
-      "                       'true. If your product is only half as good as your '\n",
-      "                       \"competitor's, you don't get half as many customers. \"\n",
-      "                       'You get no customers, and you go out of business.',\n",
-      "                       \"It's obviously true that the returns for performance \"\n",
-      "                       'are superlinear in business. Some think this is a flaw '\n",
-      "                       'of capitalism, and that if we changed the rules it '\n",
-      "                       'would stop being true. But superlinear returns for '\n",
-      "                       'performance are a feature of the world, not an '\n",
-      "                       \"artifact of rules we've invented. We see the same \"\n",
-      "                       'pattern in fame, power, military victories, knowledge, '\n",
-      "                       'and even benefit to humanity. In all of these, the '\n",
-      "                       'rich get richer.',\n",
-      "                       \"You can't understand the world without understanding \"\n",
-      "                       \"the concept of superlinear returns. And if you're \"\n",
-      "                       'ambitious you definitely should, because this will be '\n",
-      "                       'the wave you surf on.']}],\n",
-      "  'root': <uniflow.node.Node object at 0x1321c3070>}]\n"
+      "[{'error': 'Unable to locate credentials'}]\n"
      ]
     },
     {
