revision based on feedback: 1. move all imports to one code block, no redundant import

--- a/example/transform/huggingface_model_json.ipynb
+++ b/example/transform/huggingface_model_json.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,9 @@
     "\n",
     "from uniflow.flow.client import TransformClient\n",
     "from uniflow.flow.config import HuggingfaceModelConfig, TransformQAHuggingFaceJsonFormatConfig\n",
-    "from uniflow.op.prompt import Context"
+    "from uniflow.op.prompt import Context\n",
+    "from pprint import pprint\n",
+    "import time"
    ]
   },
   {
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +139,6 @@
    ],
    "source": [
     "\n",
-    "from pprint import pprint\n",
     "input_data = [\n",
     "    Context(context=data)\n",
     "    for data in raw_context_input\n",
@@ -164,21 +165,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 3/3 [01:49<00:00, 36.51s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 3/3 [01:49<00:00, 36.53s/it]\n"
      ]
     }
    ],
    "source": [
     "config = TransformQAHuggingFaceJsonFormatConfig(\n",
     "    model_config=HuggingfaceModelConfig(\n",
-    "            batch_size=8,\n",
+    "            batch_size=64,\n",
     "            response_start_key=\"question\", response_format={\"type\": \"json_object\"},\n",
     "        )\n",
     ")\n",
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +199,7 @@
       "TransformQAHuggingFaceJsonFormatConfig(flow_name='TransformHuggingFaceFlow',\n",
       "                                       model_config=HuggingfaceModelConfig(model_name='mistralai/Mistral-7B-Instruct-v0.2',\n",
       "                                                                           model_server='HuggingfaceModelServer',\n",
-      "                                                                           batch_size=8,\n",
+      "                                                                           batch_size=64,\n",
       "                                                                           neuron=False,\n",
       "                                                                           load_in_4bit=False,\n",
       "                                                                           load_in_8bit=True,\n",
@@ -220,7 +221,6 @@
     }
    ],
    "source": [
-    "from pprint import pprint\n",
     "print(\"HuggingFace model config: \")\n",
     "pprint(config)\n",
     "\n",
@@ -237,14 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/125 [00:00<?, ?it/s]"
+      "  0%|          | 0/16 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -253,14 +253,13 @@
      "text": [
       "/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/generation/configuration_utils.py:392: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.0` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
       "  warnings.warn(\n",
-      "  8%|▊         | 10/125 [05:22<1:01:24, 32.04s/it]/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/pipelines/base.py:1123: UserWarning: You seem to be using the pipelines sequentially on GPU. In order to maximize efficiency please use a dataset\n",
+      " 62%|██████▎   | 10/16 [06:32<03:54, 39.10s/it]/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/pipelines/base.py:1123: UserWarning: You seem to be using the pipelines sequentially on GPU. In order to maximize efficiency please use a dataset\n",
       "  warnings.warn(\n",
-      "100%|██████████| 125/125 [1:06:57<00:00, 32.14s/it]\n"
+      "100%|██████████| 16/16 [10:17<00:00, 38.62s/it]\n"
      ]
     }
    ],
    "source": [
-    "import time\n",
     "start_time = time.time()\n",
     "outputs = client.run(input_data)\n",
     "execution_time = time.time() - start_time"
@@ -268,14 +267,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "execution time:  4017.030855178833  seconds\n"
+      "execution time:  617.9799659252167  seconds\n"
      ]
     }
    ],
@@ -294,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,18 +356,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "output tokens:  115000\n",
+      "output tokens:  107840\n",
       "input tokens:  76000\n",
       "prompt tokens:  43\n",
-      "total tokens:  191043\n",
-      "total tokens processed per sec:  48\n"
+      "total tokens:  183883\n",
+      "total tokens processed per sec:  298\n"
      ]
     }
    ],
@@ -419,12 +418,12 @@
     "    total tokens processed per sec:  48     \n",
     "      \n",
     "- batch_size = 64    \n",
-    "    100%|██████████| 16/16 [10:26<00:00, 39.16s/it]     \n",
+    "    100%|██████████| 16/16 [10:17<00:00, 38.62s/it]        \n",
     "    output tokens:  107840    \n",
     "    input tokens:  76000    \n",
     "    prompt tokens:  43    \n",
     "    total tokens:  183883    \n",
-    "    total tokens processed per sec:  293     \n",
+    "    total tokens processed per sec:  298     \n",
     " "
    ]
   },
