modification based on feedback: 1. moved all imports to one block

--- a/example/transform/huggingface_model_json.ipynb
+++ b/example/transform/huggingface_model_json.ipynb
@@ -329,7 +329,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Count number of tokens being processed"
+    "### Count number of tokens being processed per second"
    ]
   },
   {
