add new line between outputs for better styling

--- a/example/transform/huggingface_model_json.ipynb
+++ b/example/transform/huggingface_model_json.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -131,6 +131,7 @@
      "output_type": "stream",
      "text": [
       "sample size of processed input data:  1000\n",
+      "\n",
       "Example uniflow context data:\n",
       "[Context(context='We believe our success depends upon our capabilities in areas such as design, research and development, production and marketing and is supported and protected by our intellectual property rights, such as trademarks, utility and design patents, copyrights, and trade secrets, among others. We have followed a policy of applying for and registering intellectual property rights in the United States and select foreign countries on trademarks, inventions, innovations and designs that we deem valuable. W e also continue to vigorously protect our intellectual property, including trademarks, patents and trade secrets against third-party infringement and misappropriation.'),\n",
       " Context(context='In 1948, Claude E. Shannon published A Mathematical Theory of Communication (Shannon, 1948) establishing the theory of information. In his article, Shannon introduced the concept of information entropy for the first time. We will begin our journey here.')]\n"
@@ -146,7 +147,7 @@
     "\n",
     "print(\"sample size of processed input data: \", len(input_data))\n",
     "\n",
-    "print(\"Example uniflow context data:\")\n",
+    "print(\"\\nExample uniflow context data:\")\n",
     "pprint(input_data[:2])\n"
    ]
   },
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -213,6 +214,7 @@
       "                                                                           response_format={'type': 'json_object'}),\n",
       "                                       num_thread=1,\n",
       "                                       prompt_template=PromptTemplate(instruction='\\n        Generate one question and its corresponding answer based on the last context in the last\\n        example. Follow the format of the examples below to include context, question, and answer in the response.\\n        ', few_shot_prompt=[Context(context='The quick brown fox jumps over the lazy black dog.', question='What is the color of the fox?', answer='brown.'), Context(context='The quick brown fox jumps over the lazy black dog.', question='What is the color of the dog?', answer='black.')]))\n",
+      "\n",
       "Prompt:  \n",
       "        Generate one question and its corresponding answer based on the last context in the last\n",
       "        example. Follow the format of the examples below to include context, question, and answer in the response.\n",
@@ -225,7 +227,7 @@
     "pprint(config)\n",
     "\n",
     "prompt = config.prompt_template.instruction\n",
-    "print(\"Prompt: \", prompt)"
+    "print(\"\\nPrompt: \", prompt)"
    ]
   },
   {
