nougat hf interface

--- a/example/extract/extract_pdf.ipynb
+++ b/example/extract/extract_pdf.ipynb
@@ -11,24 +11,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "73095800",
    "metadata": {},
    "source": [
     "### Before running the code\n",
     "\n",
-    "You will need to `uniflow` conda environment to run this notebook. You can set up the environment following the instruction: https://github.com/CambioML/uniflow/tree/main#installation. Furthermore, make sure you have the following packages installed:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pip3 install nougat-ocr"
+    "You will need to `uniflow` conda environment to run this notebook. You can set up the environment following the instruction: https://github.com/CambioML/uniflow/tree/main#installation."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "e7b1dc58",
    "metadata": {},
    "source": [
     "### Load packages"
@@ -36,7 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "id": "e3f11527",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,19 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8d84dd70",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/joseortiz/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -88,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "092b355a",
    "metadata": {},
    "outputs": [],
@@ -109,17 +94,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a2de91ff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ParagraphSplitter', 'MarkdownHeaderSplitter']"
+       "['ParagraphSplitter', 'MarkdownHeaderSplitter', 'RecursiveCharacterSplitter']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,18 +123,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "8e5cd8de",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/joseortiz/anaconda3/envs/uniflow/lib/python3.10/site-packages/torch/functional.py:504: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at /Users/runner/work/pytorch/pytorch/pytorch/aten/src/ATen/native/TensorShape.cpp:3527.)\n",
-      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n",
-      "100%|██████████| 1/1 [03:36<00:00, 216.60s/it]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "919fc6e025704ea1b5fb92536fc65e71",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -159,8 +149,8 @@
     "\n",
     "config = ExtractPDFConfig(\n",
     "    model_config=NougatModelConfig(\n",
-    "        model_name = \"0.1.0-small\",\n",
-    "        batch_size = 1 # When batch_size>1, nougat will run on CUDA, otherwise it will run on CPU\n",
+    "        model_name = \"facebook/nougat-small\",\n",
+    "        batch_size = 2\n",
     "    ),\n",
     "    splitter=PARAGRAPH_SPLITTER,\n",
     ")\n",
@@ -171,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d00fa833",
    "metadata": {},
    "outputs": [
@@ -185,17 +175,17 @@
        "     '###### Abstract',\n",
        "     'We report on a series of experiments with convolutional neural networks (CNN) trained on top of pre-trained word vectors for sentence-level classification tasks. We show that a simple CNN with little hyperparameter tuning and static vectors achieves excellent results on multiple benchmarks. Learning task-specific vectors through fine-tuning offers further gains in performance. We additionally propose a simple modification to the architecture to allow for the use of both task-specific and static vectors. The CNN models discussed herein improve upon the state of the art on 4 out of 7 tasks, which include sentiment analysis and question classification.',\n",
        "     '## 1 Introduction',\n",
-       "     'Deep learning models have achieved remarkable results in computer vision [11] and speech recognition [1] in recent years. Within natural language processing, much of the work with deep learning methods has involved learning word vector representations through neural language models [1, 1, 2] and performing composition over the learned word vectors for classification [1]. Word vectors, wherein words are projected from a sparse, 1-of-\\\\(V\\\\) encoding (here \\\\(V\\\\) is the vocabulary size) onto a lower dimensional vector space via a hidden layer, are essentially feature extractors that encode semantic features of words in their dimensions. In such dense representations, semantically close words are likewise close--in euclidean or cosine distance--in the lower dimensional vector space.',\n",
-       "     'Convolutional neural networks (CNN) utilize layers with convolving filters that are applied to local features [1]. Originally invented for computer vision, CNN models have subsequently been shown to be effective for NLP and have achieved excellent results in semantic parsing [13], search query retrieval [2], sentence modeling [1], and other traditional NLP tasks [1].',\n",
+       "     'Deep learning models have achieved remarkable results in computer vision [11] and speech recognition [1] in recent years. Within natural language processing, much of the work with deep learning methods has involved learning word vector representations through neural language models [1, 1, 13] and performing composition over the learned word vectors for classification [1]. Word vectors, wherein words are projected from a sparse, 1-of-\\\\(V\\\\) encoding (here \\\\(V\\\\) is the vocabulary size) onto a lower dimensional vector space via a hidden layer, are essentially feature extractors that encode semantic features of words in their dimensions. In such dense representations, semantically close words are likewise close--in euclidean or cosine distance--in the lower dimensional vector space.',\n",
+       "     'Convolutional neural networks (CNN) utilize layers with convolving filters that are applied to local features [1]. Originally invented for computer vision, CNN models have subsequently been shown to be effective for NLP and have achieved excellent results in semantic parsing [14], search query retrieval [2], sentence modeling [1], and other traditional NLP tasks [1].',\n",
        "     \"In the present work, we train a simple CNN with one layer of convolution on top of word vectors obtained from an unsupervised neural language model. These vectors were trained by Mikolov et al. (2013) on 100 billion words of Google News, and are publicly available.1 We initially keep the word vectors static and learn only the other parameters of the model. Despite little tuning of hyperparameters, this simple model achieves excellent results on multiple benchmarks, suggesting that the pre-trained vectors are 'universal' feature extractors that can be utilized for various classification tasks. Learning task-specific vectors through fine-tuning results in further improvements. We finally describe a simple modification to the architecture to allow for the use of both pre-trained and task-specific vectors by having multiple channels.\",\n",
-       "     'Footnote 1: [https://code.google.com/p/word2vec/](https://code.google.com/p/word2vec/)',\n",
+       "     'Footnote 1: https://code.google.com/p/word2vec/',\n",
        "     'Our work is philosophically similar to Razavian et al. (2014) which showed that for image classification, feature extractors obtained from a pre-trained deep learning model perform well on a variety of tasks--including tasks that are very different from the original task for which the feature extractors were trained.',\n",
        "     '## 2 Model',\n",
        "     'The model architecture, shown in figure 1, is a slight variant of the CNN architecture of Collobert et al. (2011). Let \\\\(\\\\mathbf{x}_{i}\\\\in\\\\mathbb{R}^{k}\\\\) be the \\\\(k\\\\)-dimensional word vector corresponding to the \\\\(i\\\\)-th word in the sentence. A sentence of length \\\\(n\\\\) (padded where']}],\n",
-       "  'root': <uniflow.node.Node at 0x29bcd74f0>}]"
+       "  'root': <uniflow.node.Node at 0x7f19f09f2e00>}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,6 +231,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "982d781a",
    "metadata": {},
    "source": [
     "### Run the model\n",
@@ -266,6 +257,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "21dab143",
    "metadata": {},
    "source": [
     "Now we call the `run` method on the `client` object to execute the question-answer generation operation on the data shown above.\n",
@@ -276,6 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "ee76eb78",
    "metadata": {},
    "outputs": [
     {
@@ -292,6 +285,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2a4252a6",
    "metadata": {},
    "source": [
     "### Process the output\n",
@@ -302,6 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "4ff4070f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,6 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "36257b07",
    "metadata": {},
    "outputs": [
     {
@@ -495,6 +491,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c59e52c6",
    "metadata": {},
    "source": [
     "Finally, we can save the generated question answers into a `.csv` file."
@@ -503,6 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "0b88ea3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,6 +528,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8f74b681",
    "metadata": {},
    "source": [
     "## End of the notebook\n",
@@ -544,9 +543,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "self-instruct-ft",
+   "display_name": "pytorch",
    "language": "python",
-   "name": "python3"
+   "name": "pytorch"
   },
   "language_info": {
    "codemirror_mode": {
